fix: [InputFile] reduce chips vertical spacing

--- a/src/components/atoms/InputFile/InputFile.scss
+++ b/src/components/atoms/InputFile/InputFile.scss
@@ -26,10 +26,11 @@
 .rf-file-input__chip-wrapper {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 8px;
 }
 
 .rf-file-input__chip {
-  padding: 20px 12px 0px 0px;
+  padding: 12px 12px 0px 0px;
 }
 
 .rf-file-input__chip-text {
